crates/pixi_cli/src/workspace/export/snapshots/pixi_cli__workspace__export__conda_explicit_spec__tests__test_render_conda_explicit_spec_rich_default_osx-arm64-macos-14-0.snap
---
source: crates/pixi_cli/src/workspace/export/conda_explicit_spec.rs
assertion_line: 366
expression: "fs_err::read_to_string(file_path).unwrap()"
---
# Generated by `pixi workspace export`
# platform: osx-arm64
@EXPLICIT
https://conda.anaconda.org/conda-forge/noarch/ca-certificates-2026.7.22-hbd8a1cb_0.conda#0f51e2391ade309db462a55611263e9c
